--- a/css/styles.css
+++ b/css/styles.css
@@ -302,3 +302,13 @@ margin:10px;
 	position:relative !important;
 	}
 }
+.siteLogo{
+  text-align:center;
+  margin: 0 0 15px 0;
+}
+.siteLogo img{
+  display:inline-block;
+  max-width: 260px; /* عدلها لو تحب */
+  height: auto;
+}
+
