--- a/css/styles.css
+++ b/css/styles.css
@@ -69,13 +69,14 @@ a {
 a:hover {
 	color:#BBB;	
 } 
-#Header {
-margin-bottom: 62px;
-position: relative;
-width: 100%;
-height: 110px;
-line-height: 110px;
-z-index: 1;
+#Header{
+  height: 0 !important;
+  line-height: 0 !important;
+  margin-bottom: 0 !important;
+  overflow: hidden;
+}
+#Header h1{
+  display:none !important;
 }
 .wrapper {
 margin: 0 auto;
