--- a/css/styles.css
+++ b/css/styles.css
@@ -84,43 +84,19 @@ position: relative;
 width: 920px;
 z-index: 1;
 }
-#socialIcons {
-display:block;
-}
-#socialIcons ul {
-margin: 0px; 
-padding:0px;
-text-align: center;
-}
-#socialIcons ul li {
-margin-right: 5px;
-height: 34px;
-line-height: 34px;
-list-style-type: none;
-display: inline-block; 
-}
 #socialIcons ul li a{
-width:34px;
-height:34px; 
-display: inline-block;
+  width:34px;
+  height:34px;
+  display:inline-flex;
+  align-items:center;
+  justify-content:center;
+  font-size: 22px;
+  color: #fff;
 }
-.twitterIcon, .facebookIcon, .linkedInIcon, .pintrestIcon{
-background: url('../images/social-icons.png') -74px 0px;
+#socialIcons ul li a:hover{
+  color:#BBB;
 }
-.facebookIcon{
-background-position: 10px 0px;
-}
-.linkedInIcon{
-background-position: -245px 0px;
-}
-.pintrestIcon{
-background-position: -331px 0px;
-}
-.tempBy{
-display:block;
-text-align:center;
-margin-top:40px;
-}
+
 #Content h2 {
 display: inline-block;
 margin: 25px 0 45px;
