--- a/css/styles.css
+++ b/css/styles.css
@@ -198,14 +198,16 @@ text-shadow: 2px 2px rgba(12, 11, 11, 0.56);
 .styled div:last-child{
 border:none;
 }
-#overlay{ 
-background: rgba(0, 0, 0, 0.04) url(../images/overlays/06.png) top left repeat;
-background:rgba(0, 0, 0, 0.14);
-position: fixed;
-top: 0px;
-width: 100%;
-bottom: 0px;
-opacity:0.8;
+#overlay{
+  background: rgba(0,0,0,0.35);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  opacity: 1;
+  z-index: 0;
+  pointer-events: none;
 }
 /* IE7 inline-block hack */
 *+html .styled div{
